--- a/demo_apnortheast2/demoapne2-asis/sample-app/canary/application.yaml
+++ b/demo_apnortheast2/demoapne2-asis/sample-app/canary/application.yaml
@@ -8,7 +8,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/namejsjeongkr/devops_k8s_env
-    targetRevision: develop
+    targetRevision: main
     path: apps/sample-canary/charts
     helm:
       valueFiles:
