--- a/demo_apnortheast2/demoapne2-asis/sample-app/canary/values.yaml
+++ b/demo_apnortheast2/demoapne2-asis/sample-app/canary/values.yaml
@@ -121,7 +121,7 @@ ingress:
       paths:
         - backend:
             service:
-              name: istio-ingressgateway
+              name: sample-app-svc
               port:
                 number: 80
   tls: []
