Change patchesJson6902 to patches

--- a/common/argocd/kustomization.yaml
+++ b/common/argocd/kustomization.yaml
@@ -16,7 +16,7 @@ resources:
 
   # Register the bootstrap applications 
   - bootstrap.yaml
-patchesJson6902:
+patches:
   # Patch HA command option
   - target:
       group: apps
