--- a/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/application.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/application.yaml
@@ -18,6 +18,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: blugreen
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
