--- a/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/values.yaml
@@ -44,7 +44,7 @@ serviceAccount:
     eks.amazonaws.com/role-arn: IAM_ROLE_ARN
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "sample-blugreen-sa"
+  name: ""
 
 
 ### Pod, Service ports Config
