--- a/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/canary/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/canary/values.yaml
@@ -41,7 +41,7 @@ serviceAccount:
     eks.amazonaws.com/role-arn: IAM_ROLE_ARN
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "sample-canary-sa"
+  name: ""
 
 
 ### Pod, Service ports Config
