update canary appname

--- a/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/canary/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/canary/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 ### Default values for sample-canary.
-appName: sample-bluegreen
+appName: sample-canary
 namespace: canary
 env: demodapne2
 
