--- a/apps/sample-canary/charts/templates/service.yaml
+++ b/apps/sample-canary/charts/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.appName }}-svc
+  name: {{ .Values.appName }}-svc-active
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.appName }}
