Update canary image tag

--- a/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/image.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/sample-project/sample-app/bluegreen/image.yaml
@@ -1,3 +1,5 @@
+# https://hub.docker.com/r/argoproj/rollouts-demo/tags
+# tag should be one of the red, blue, green, yellow, purple, orange
 image:
   repository: argoproj/rollouts-demo
   tag: red
