--- a/demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen-kind/application.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen-kind/application.yaml
@@ -2,18 +2,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-app-bluegreen
+  name: argo-bluegreen
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/namejsjeongkr/devops_k8s_env
     targetRevision: main
-    path: apps/sample-bluegreen/charts
+    path: apps/sample-bluegreen-kind/charts
     helm:
       valueFiles:
-        - ../../../demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
-        - ../../../demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/image.yaml
+        - ../../../demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen-kind/values.yaml
+        - ../../../demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen-kind/image.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: blugreen
