--- a/demod_apnortheast2/demodapne2-abcd/default/sample-app/canary/application.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/sample-app/canary/application.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-canary
+  name: sample-app-canary
   namespace: argocd
 spec:
   project: default
