--- a/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
@@ -113,6 +113,7 @@ ingress:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
     external-dns.alpha.kubernetes.io/hostname: "sample-bluegreen.namejsjeongkr.com"
+    alb.ingress.kubernetes.io/inbound-cidrs: 219.254.48.3/32
   hosts:
     - http:
       paths:
