--- a/demod_apnortheast2/demodapne2-abcd/default/sample-app/canary/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/sample-app/canary/values.yaml
@@ -110,6 +110,7 @@ ingress:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
     external-dns.alpha.kubernetes.io/hostname: "sample-canary.namejsjeongkr.com"
+    alb.ingress.kubernetes.io/inbound-cidrs: 219.254.48.3/32
   hosts:
     - http:
       paths:
