Add external_secrets test yaml

--- a/demod_apnortheast2/demodapne2-abcd/external_secret_test.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/external_secret_test.yaml
@@ -34,9 +34,8 @@ spec:
         labels:
           app: sample-bluegreen
       data:
-        type: git
-        password: "{{ .test | toString }}"
+        test: "{{ .test | toString }}"
   data:
-    - secretKey: test-secret
+    - secretKey: test
       remoteRef:
         key: test
