--- a/demod_apnortheast2/demodapne2-abcd/argocd/karpenter-provisioner.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/argocd/karpenter-provisioner.yaml
@@ -19,7 +19,7 @@ spec:
     # Include general purpose instance families
     - key: eks.amazonaws.com/nodegroup
       operator: In
-      values: ["demodapne2-nsnj-ng-ondemand"]
+      values: ["demodapne2-uuhx-ng-ondemand"]
     - key: karpenter.sh/capacity-type
       operator: In
       values: ["on-demand"]
@@ -46,11 +46,11 @@ metadata:
   name: on-demand
 spec:
   subnetSelector:
-    karpenter.sh/discovery: demodapne2-nsnj
+    karpenter.sh/discovery: demodapne2-uuhx
   securityGroupSelector:
-    karpenter.sh/discovery: demodapne2-nsnj
+    karpenter.sh/discovery: demodapne2-uuhx
   tags:
-    Name: demodapne2-nsnj-ondemand-karpenter
+    Name: demodapne2-uuhx-ondemand-karpenter
 ---
 ### spot
 apiVersion: karpenter.sh/v1alpha5
@@ -73,7 +73,7 @@ spec:
   requirements:
     - key: eks.amazonaws.com/nodegroup
       operator: In
-      values: ["demodapne2-nsnj-ng-spot"]
+      values: ["demodapne2-uuhx-ng-spot"]
     - key: karpenter.sh/capacity-type
       operator: In
       values: ["spot"]
@@ -99,8 +99,8 @@ metadata:
   name: spot
 spec:
   subnetSelector:
-    karpenter.sh/discovery: demodapne2-nsnj
+    karpenter.sh/discovery: demodapne2-uuhx
   securityGroupSelector:
-    karpenter.sh/discovery: demodapne2-nsnj
+    karpenter.sh/discovery: demodapne2-uuhx
   tags:
-    Name: demodapne2-nsnj-spot-karpenter
+    Name: demodapne2-uuhx-spot-karpenter
