Update namespace in argocd application

--- a/demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen/application.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen/application.yaml
@@ -16,7 +16,7 @@ spec:
         - ../../../demod_apnortheast2/demodapne2-abcd/default/argo/bluegreen/image.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: blugreen
+    namespace: bluegreen
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
