false to volume of sample app

--- a/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
@@ -6,8 +6,10 @@ appName: sample-bluegreen
 namespace: bluegreen
 env: demodapne2
 
+
+### ExternalSecrets TEST
 volume:
-  enabled: true
+  enabled: false
 
 ### Argo Rollout auto promote Config
 autoPromotionEnabled: false
