--- a/apps/sample-bluegreen/charts/templates/service.yaml
+++ b/apps/sample-bluegreen/charts/templates/service.yaml
@@ -26,6 +26,7 @@ metadata:
   labels:
     app: {{ .Values.appName }}
 spec:
+  type: {{ .Values.service.type }}
   selector:
     app: {{ .Values.appName }}
   ports:
