Update autoPromotionEnabled of custom app

--- a/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/sample-app/bluegreen/values.yaml
@@ -12,7 +12,7 @@ volume:
   enabled: false
 
 ### Argo Rollout auto promote Config
-autoPromotionEnabled: false
+autoPromotionEnabled: true
 
 
 ### Spring env Config
