Update image tag for canary sample app

--- a/demod_apnortheast2/demodapne2-abcd/default/argo/canary/image.yaml
+++ b/demod_apnortheast2/demodapne2-abcd/default/argo/canary/image.yaml
@@ -2,4 +2,4 @@
 # tag should be one of the red, blue, green, yellow, purple, orange
 image:
   repository: argoproj/rollouts-demo
-  tag: yellow
+  tag: purple
